# db-engine

./: .gitignore  README.md  pyproject.toml  test_data.csv
data/: large_test.csv
experiments/: benchmark_columnar_vs_row.py  benchmark_index.py
scripts/: generate_test_data.py
src/db_engine/: aggregate.py  cli.py  csv_loader.py  engine.py  filter.py  hash_index.py  nl2sql.py  parser.py  projection.py  sorter.py  table.py  types.py
tests/: test_core.py  test_nl2sql.py  test_types.py
