[project]
name = "db-engine"
version = "0.1.0"
description = "轻量级数据库引擎 —— 课程项目"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
db-engine = "db_engine.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
